# mlops2025_ElieHaouchan_GhadyNehme

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_batch_inference_pipeline.py  run_training_pipeline.py
scripts/: batch_inference 1.py  feature_engineering.py  preprocess.py  train.py
src/mlproject/features/: __init__.py  featurize.py
src/mlproject/inference/: __init__ 1.py  batch_inference.py
src/mlproject/preprocess/: __init__.py  preprocessor.py
src/mlproject/train/: __init__.py  training.py
